@@ -5917,7 +5917,15 @@ void ONMainWindow::slotShowPassForm()
         pass->selectAll();
     }
     else
+    {
+#ifdef Q_OS_WIN
+        login->setText(getenv("USERNAME"));
+#else
+        login->setText(getenv("USER"));
+#endif
         login->setFocus();
+        login->selectAll();
+    }
 
 
     if ( !embedMode )
